--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,7 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@500&display=swap');
 
 :root {
-  --primary: #fe2c55
+  --primary: #fe2c55;
+  //Default layout
+  --default-layput-header-height: 60px;
+  --default-layput-width-content: 1150px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
